--- a/master.css
+++ b/master.css
@@ -1,14 +1,16 @@
 :root {
+  --background-color: #fff;
   --main-color: #7f73cd;
-  --second-color: #2cb0c8;
-  --four: #297fec;
-  --darker: #3828ae;
-  /* --lighter: #8074dd; */
-  --second-color-dark: #3e8cc0;
-  --one: #622ad8;
-  /* --two: #7942e7; */
-  --five: #0f5bd8;
+  --light-text-color: #fff;
+  .dark {
+    --background-color: #23242a;
+    --main-color: #622ad8;
+    --header-color: #222;
+  }
 }
+
+/* ------------------------------------------ */
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -44,6 +46,9 @@ html {
     width: 1170px;
   }
 }
+
+/* ------------------------------------------ */
+
 /* Dark mode Switch Light*/
 .dark-mode {
   position: absolute;
@@ -107,28 +112,32 @@ html {
 .dark-mode.active #sun {
   color: black;
 }
+
+/* ------------------------------------------ */
+
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #fff;
+  background-color: var(--background-color);
   transition: all 0.2s ease-in-out;
 }
-body.dark {
-  background-color: #2c3333;
-}
+
+/* ------------------------------------------ */
 
 header {
   background-color: var(--main-color);
-  text-align: center;
+  /* text-align: center; */
   padding: 20px;
   position: relative;
 }
 header.dark {
-  background-color: var(--one);
+  background-color: var(--header-color);
 }
 header img {
-  max-width: 240px;
-  height: 40px;
+  max-width: 200px;
+  height: 25px;
 }
+
+/* ------------------------------------------ */
 
 main {
   margin: 50px auto;
@@ -142,10 +151,8 @@ main {
   -o-border-radius: 20px;
   display: flex;
   flex-direction: column;
-  /* border: 1px solid var(--main-color); */
-  border: 1px solid var(--one);
-  box-shadow: 1px 1px black;
   justify-content: center;
+  position: relative;
 }
 @media (max-width: 500px) {
   main {
@@ -157,23 +164,36 @@ main {
   justify-content: space-between;
   border-bottom: 1px var(--main-color) solid;
   padding-bottom: 5px;
-  /* color: black; */
   width: 100%;
+  inset: 4px;
+}
+.get-input {
+  position: relative;
+}
+.no-name {
+  position: absolute;
+  top: -20px;
+  left: 0;
+  font-size: 12px;
+  display: none;
 }
 .user-input {
   padding: 5px;
   text-align: center;
+  width: 100%;
   border: none;
   outline: none;
   background-color: transparent;
-  color: white;
+  color: var(--light-text-color);
   font-size: 18px;
   border-radius: 20px;
   margin: 5px;
+  mix-blend-mode: difference;
 }
 
 .category {
   margin: 10px;
+  color: var(--light-text-color);
 }
 .img-container {
   max-height: 300px;
@@ -195,12 +215,13 @@ main {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  /* border: 1px solid var(--main-color); */
-  border: 1px solid var(--one);
+  background-color: var(--main-color);
   flex-direction: column;
 }
 .question h3 {
-  margin: 20px 0;
+  margin: 20px 20px;
+  color: var(--light-text-color);
+  font-weight: normal;
 }
 .answers {
   display: flex;
@@ -212,7 +233,7 @@ main {
 }
 .answer {
   padding: 10px;
-  border: 1px solid var(--one);
+  border: 1px solid var(--main-color);
   border-radius: 5px;
   text-align: left;
   transition: all 0.1s 0s linear;
@@ -227,19 +248,20 @@ main {
   -ms-transform: translate(5px);
   -o-transform: translate(5px);
   -webkit-transform: translate(5px);
-  background-color: var(--four);
-  color: white;
+  background-color: var(--main-color);
+  color: var(--light-text-color);
 }
 .dark {
-  color: white;
+  color: var(--light-text-color);
 }
 input[type="radio"] {
   margin-right: 10px;
+  accent-color: var(--main-color);
 }
 input[type="submit"],
 .start {
-  background-color: var(--four);
-  color: white;
+  background-color: var(--main-color);
+  color: var(--light-text-color);
   border: none;
   padding: 10px 15px;
   margin-top: 20px;
@@ -258,19 +280,17 @@ input[type="submit"],
 input[type="submit"] {
   display: none;
 }
-input[type="submit"].dark {
-  background-color: var(--four);
-}
+
 input[type="submit"]:hover,
 .start:hover {
-  background-color: var(--five);
+  opacity: 0.8;
 }
 .result {
   font-weight: bold;
   text-align: center;
   margin: 20px;
   background-color: var(--main-color);
-  color: white;
+  color: var(--light-text-color);
   padding: 10px;
   border-radius: 5px;
 }
