--- a/master.css
+++ b/master.css
@@ -103,6 +103,14 @@ html {
   left: 10%;
   font-size: 20px;
 }
+
+/* Small */
+@media (min-width: 768px) {
+  #moon {
+    top: 0;
+  }
+}
+
 #sun {
   right: 10%;
   font-size: 10px;
